--- a/content/posts/3.md
+++ b/content/posts/3.md
@@ -4,7 +4,7 @@ date : "2022-06-27T01:40:05+02:00"
 author : ""
 authorTwitter : "" #do not include @
 cover : ""
-tags : ["", ""]
+tags : ["wikidata", ""]
 keywords : ["", ""]
 description : ""
 showFullContent : false
