update post 1 title

--- a/content/posts/1.md
+++ b/content/posts/1.md
@@ -1,5 +1,5 @@
 ---
-title: "STEHT ALAA BEI!"
+title: "[POSTER] STEHT ALAA BEI!"
 date: 2022-06-22T17:08:26+02:00
 draft: false
 
@@ -12,4 +12,4 @@ Distribute::*
 
 This is a copyleft work, or does not adhere to copyright paradigm...
 
-Feel free to do whatever you want with it, without attribution...
+Feel free to do whatever you want with it, without attribution
