--- a/content/english/1.md
+++ b/content/english/1.md
@@ -3,6 +3,7 @@ title: "[Sticky] Posters, Stencils, ...etc, in spirit of Alaa"
 date: 2022-06-22T17:08:26+02:00
 lastmod: 2022-08-16T20:59:18+02:00
 draft: false
+image: "STEHT_ALAA_BEI - Cover.jpg"
 ---
 Poster: Read (with) Alaa
 
@@ -14,7 +15,7 @@ Print, Modify, Put it up!
 Distribute::*
 
 ![STEHT BEI ALAA](/STEHT_ALAA_BEI.jpg)
-
+![STEHT BEI ALAA](/STEHT_ALAA_BEI - Cover.jpg)
 This is a copyleft work, or does not adhere to copyright paradigm...
 
 Feel free to do whatever you want with it, without attribution
