fix iframe and enhance query

--- a/content/english/3.md
+++ b/content/english/3.md
@@ -11,5 +11,4 @@ showFullContent : false
 readingTime : false
 hideComments : false
 ---
-
-{{< iframe "https://query.wikidata.org/embed.html#%23Cats%0ASELECT%20%3Fitem%20%3FitemLabel%20%0AWHERE%20%0A%7B%0A%20%20%3Fitem%20wdt%3AP31%20wd%3AQ40357.%20%23%20Must%20be%20of%20a%20cat%0A%20%20%3Fitem%20wdt%3AP17%20wd%3AQ79%0A%20%20SERVICE%20wikibase%3Alabel%20%7B%20bd%3AserviceParam%20wikibase%3Alanguage%20%22%5BAUTO_LANGUAGE%5D%2Car%2Cen%2Cde%22.%20%7D%20%23%20Helps%20get%20the%20label%20in%20your%20language%2C%20if%20not%2C%20then%20en%20language%0A%7D" >}}
+{{< iframe "https://query.wikidata.org/embed.html#SELECT%20%3Fitem%20%3FitemLabel%20%3FCapacity%20%3Fyear%0AWHERE%20%0A%7B%0A%20%20%3Fitem%20wdt%3AP31%20wd%3AQ40357.%20%23%20Must%20be%20of%20a%20cat%0A%20%20%3Fitem%20wdt%3AP17%20wd%3AQ79%20.%0A%20%20bind%28%22%3F%22%20as%20%3Fdefault_Capacity%29%0A%20%20bind%28%22%3F%22%20as%20%3Fdefault_inception%29%0A%20%20OPTIONAL%20%20%7B%3Fitem%20wdt%3AP571%20%3Finception%20%7D%20%0A%20%20OPTIONAL%20%20%7B%3Fitem%20wdt%3AP1083%20%3FCapacity%20%7D%0A%20%20SERVICE%20wikibase%3Alabel%20%7B%20bd%3AserviceParam%20wikibase%3Alanguage%20%22%5BAUTO_LANGUAGE%5D%2Car%2Cen%2Cde%2Cfr%2Cit%22.%20%7D%0A%20%20bind%28coalesce%28%3FCapacity%2C%20%3Fdefault_Capacity%29%20as%20%3FCapacity%29%0A%20%20bind%28coalesce%28YEAR%28%3Finception%29%2C%20%3Fdefault_inception%29%20as%20%3Fyear%29%0A%7D%20ORDER%20BY%20DESC%20%28%3Fyear%29%0A" >}} 
