--- a/content/english/3.md
+++ b/content/english/3.md
@@ -11,4 +11,8 @@ showFullContent : false
 readingTime : false
 hideComments : false
 ---
+
+Egypt has built 60 detention centers over the last 11 years, almost all of them under Mr. el-Sisi, according to Egyptian reports and the Cairo-based Arabic Network for Human Rights Information, which shuttered this year after relentless government harassment. As of 2021, the country had 78 prisons, the group said.[src](https://www.nytimes.com/2022/08/08/world/middleeast/egypts-prisons-conditions.html#:~:text=Egypt%20has%20built%2060%20detention,78%20prisons%2C%20the%20group%20said. "‘A Slow Death’: Egypt’s Political Prisoners Recount Horrific Conditions").
+
+
 {{< iframe "https://query.wikidata.org/embed.html#SELECT%20%3Fitem%20%3FitemLabel%20%3FCapacity%20%3Fyear%0AWHERE%20%0A%7B%0A%20%20%3Fitem%20wdt%3AP31%20wd%3AQ40357.%20%23%20Must%20be%20of%20a%20cat%0A%20%20%3Fitem%20wdt%3AP17%20wd%3AQ79%20.%0A%20%20bind%28%22%3F%22%20as%20%3Fdefault_Capacity%29%0A%20%20bind%28%22%3F%22%20as%20%3Fdefault_inception%29%0A%20%20OPTIONAL%20%20%7B%3Fitem%20wdt%3AP571%20%3Finception%20%7D%20%0A%20%20OPTIONAL%20%20%7B%3Fitem%20wdt%3AP1083%20%3FCapacity%20%7D%0A%20%20SERVICE%20wikibase%3Alabel%20%7B%20bd%3AserviceParam%20wikibase%3Alanguage%20%22%5BAUTO_LANGUAGE%5D%2Car%2Cen%2Cde%2Cfr%2Cit%22.%20%7D%0A%20%20bind%28coalesce%28%3FCapacity%2C%20%3Fdefault_Capacity%29%20as%20%3FCapacity%29%0A%20%20bind%28coalesce%28YEAR%28%3Finception%29%2C%20%3Fdefault_inception%29%20as%20%3Fyear%29%0A%7D%20ORDER%20BY%20DESC%20%28%3Fyear%29%0A" >}} 
