--- a/content/english/3.md
+++ b/content/english/3.md
@@ -12,7 +12,16 @@ readingTime : false
 hideComments : false
 ---
 
-Egypt has built 60 detention centers over the last 11 years, almost all of them under Mr. el-Sisi, according to Egyptian reports and the Cairo-based Arabic Network for Human Rights Information, which shuttered this year after relentless government harassment. As of 2021, the country had 78 prisons, the group said.[src](https://www.nytimes.com/2022/08/08/world/middleeast/egypts-prisons-conditions.html#:~:text=Egypt%20has%20built%2060%20detention,78%20prisons%2C%20the%20group%20said. "‘A Slow Death’: Egypt’s Political Prisoners Recount Horrific Conditions").
+Egypt has built 60 detention centers over the last 11 years, almost all of them under Mr. el-Sisi, according to Egyptian reports and the Cairo-based Arabic Network for Human Rights Information, which shuttered this year after relentless government harassment. As of 2021, the country had 78 prisons, the group said.[^](https://www.nytimes.com/2022/08/08/world/middleeast/egypts-prisons-conditions.html#:~:text=Egypt%20has%20built%2060%20detention,78%20prisons%2C%20the%20group%20said. "‘A Slow Death’: Egypt’s Political Prisoners Recount Horrific Conditions").
+
+How much are we allowed to know about this incarceration system?
+
+Civil society activity is severely restricted, let alone monitoring human rights violations. We are unable to find official public listings,compilations or figures of the impriosened, or the facilities nor their capacities. What is the definition of systematic concealment of information?
+
+We share Alaa's[^](https://www.accessnow.org/letter-alaa-abd-el-fattah-unlike-not-defeated-yet/)[^](https://www.madamasr.com/en/2017/04/18/opinion/u/a-profile-of-the-activist-outside-his-prison/) his understanding of the importance of information technology in shaping our world. hoping for a better world, and aware of our exposure to monopolies, we can map how little we know. "struggle is an opportunity for understanding", and "Seizing opportunities to produce meaning remains a necessity"; How much can we understand about how many of those 78 prisons and hundreds of places of detention that the Egyptian regime make in disguise, but from those imprisoned in egypt and their beloved ones?
 
 
-{{< iframe "https://query.wikidata.org/embed.html#SELECT%20%3Fitem%20%3FitemLabel%20%3FCapacity%20%3Fyear%0AWHERE%20%0A%7B%0A%20%20%3Fitem%20wdt%3AP31%20wd%3AQ40357.%20%23%20Must%20be%20of%20a%20cat%0A%20%20%3Fitem%20wdt%3AP17%20wd%3AQ79%20.%0A%20%20bind%28%22%3F%22%20as%20%3Fdefault_Capacity%29%0A%20%20bind%28%22%3F%22%20as%20%3Fdefault_inception%29%0A%20%20OPTIONAL%20%20%7B%3Fitem%20wdt%3AP571%20%3Finception%20%7D%20%0A%20%20OPTIONAL%20%20%7B%3Fitem%20wdt%3AP1083%20%3FCapacity%20%7D%0A%20%20SERVICE%20wikibase%3Alabel%20%7B%20bd%3AserviceParam%20wikibase%3Alanguage%20%22%5BAUTO_LANGUAGE%5D%2Car%2Cen%2Cde%2Cfr%2Cit%22.%20%7D%0A%20%20bind%28coalesce%28%3FCapacity%2C%20%3Fdefault_Capacity%29%20as%20%3FCapacity%29%0A%20%20bind%28coalesce%28YEAR%28%3Finception%29%2C%20%3Fdefault_inception%29%20as%20%3Fyear%29%0A%7D%20ORDER%20BY%20DESC%20%28%3Fyear%29%0A" >}} 
+{{< iframe "https://query.wikidata.org/embed.html#SELECT%20%3Fitem%20%3FitemLabel%20%3FCapacity%20%3Fyear%0AWHERE%20%0A%7B%0A%20%20%3Fitem%20wdt%3AP31%20wd%3AQ40357.%20%23%20Must%20be%20of%20a%20cat%0A%20%20%3Fitem%20wdt%3AP17%20wd%3AQ79%20.%0A%20%20bind%28%22%3F%22%20as%20%3Fdefault_Capacity%29%0A%20%20bind%28%22%3F%22%20as%20%3Fdefault_inception%29%0A%20%20OPTIONAL%20%20%7B%3Fitem%20wdt%3AP571%20%3Finception%20%7D%20%0A%20%20OPTIONAL%20%20%7B%3Fitem%20wdt%3AP1083%20%3FCapacity%20%7D%0A%20%20SERVICE%20wikibase%3Alabel%20%7B%20bd%3AserviceParam%20wikibase%3Alanguage%20%22%5BAUTO_LANGUAGE%5D%2Car%2Cen%2Cde%2Cfr%2Cit%22.%20%7D%0A%20%20bind%28coalesce%28%3FCapacity%2C%20%3Fdefault_Capacity%29%20as%20%3FCapacity%29%0A%20%20bind%28coalesce%28YEAR%28%3Finception%29%2C%20%3Fdefault_inception%29%20as%20%3Fyear%29%0A%7D%20ORDER%20BY%20DESC%20%28%3Fyear%29%0A" >}}
+
+
+The deterioration of freedoms between the previous repressive regime and the current, most repressive regime is terrifying. Especially since the number of prisoners did not fluctuate for many years under the previous regime, which had its political detainees as well. The correlation between the number of prisoners [^](https://www.prisonstudies.org/country/egypt "World Prison Brief|Egypt - (c.66,000 in 2011, c.119,000 in 2021)") and the deterioration of civil liberties under the current regime: [^](https://www.prisonstudies.org/country/egypt "World Prison Brief|Egypt - (Prison population rate (per 100,000 of national population) increased by 41% (83 in 2011,117 in 2021)") Freedom is deprived by imprisoning 53,000 people, 80% more, compared to its notorious predecessor!
