--- a/content/english/3.md
+++ b/content/english/3.md
@@ -21,7 +21,7 @@ Civil society activity is severely restricted, let alone monitoring human rights
 We share Alaa's[^](https://www.accessnow.org/letter-alaa-abd-el-fattah-unlike-not-defeated-yet/)[^](https://www.madamasr.com/en/2017/04/18/opinion/u/a-profile-of-the-activist-outside-his-prison/) his understanding of the importance of information technology in shaping our world. hoping for a better world, and aware of our exposure to monopolies, we can map how little we know. "struggle is an opportunity for understanding", and "Seizing opportunities to produce meaning remains a necessity"; How much can we understand about how many of those 78 prisons and hundreds of places of detention that the Egyptian regime make in disguise, but from those imprisoned in egypt and their beloved ones?
 
 
-{{< iframe "https://query.wikidata.org/embed.html#SELECT%20%3Fitem%20%3FitemLabel%20%3FCapacity%20%3Fyear%0AWHERE%20%0A%7B%0A%20%20%3Fitem%20wdt%3AP31%20wd%3AQ40357.%20%23%20Must%20be%20of%20a%20cat%0A%20%20%3Fitem%20wdt%3AP17%20wd%3AQ79%20.%0A%20%20bind%28%22%3F%22%20as%20%3Fdefault_Capacity%29%0A%20%20bind%28%22%3F%22%20as%20%3Fdefault_inception%29%0A%20%20OPTIONAL%20%20%7B%3Fitem%20wdt%3AP571%20%3Finception%20%7D%20%0A%20%20OPTIONAL%20%20%7B%3Fitem%20wdt%3AP1083%20%3FCapacity%20%7D%0A%20%20SERVICE%20wikibase%3Alabel%20%7B%20bd%3AserviceParam%20wikibase%3Alanguage%20%22%5BAUTO_LANGUAGE%5D%2Car%2Cen%2Cde%2Cfr%2Cit%22.%20%7D%0A%20%20bind%28coalesce%28%3FCapacity%2C%20%3Fdefault_Capacity%29%20as%20%3FCapacity%29%0A%20%20bind%28coalesce%28YEAR%28%3Finception%29%2C%20%3Fdefault_inception%29%20as%20%3Fyear%29%0A%7D%20ORDER%20BY%20DESC%20%28%3Fyear%29%0A" >}}
+{{< iframe "https://query.wikidata.org/embed.html#SELECT%20%20%3Fitem%20%3FitemLabel%20%28%3Fyear%20AS%20%3FInception_Year%29%20%3FPCount%20%28CONCAT%28%28STR%28COUNT%28%3Farticle%29%29%29%2C%22%20%20%20%20%20%20%20%20%20%20wikipedia%20articles%20%2F%20%22%20%2C%20%28STR%28COUNT%28%3Farticle%29%29%29%2C%22%20Languages%22%29%20as%20%3FWikipedia_Content_and_Articles%29%0A%20%20WHERE%7B%0A%20%20%20%20%20%20%3Fitem%20wdt%3AP31%20wd%3AQ40357.%20%23%20Must%20be%20of%20a%20prison%0A%20%20%20%20%20%20%3Fitem%20wdt%3AP17%20wd%3AQ79.%0A%20%20%20%20%20%20%23bind%28%22no%20aricles%22%20as%20%3Fdefault_article%29%0A%20%20%20%20%20%20OPTIONAL%20%7B%3Farticle%20schema%3Aabout%20%3Fitem%20.%0A%20%20%20%20%20%20%3Farticle%20schema%3AinLanguage%20%3FwpLanguage.%7D%0A%20%20%20%20%20%20%0A%20%20%20%20%20%20bind%28%22unknown%22%20as%20%3Fdefault_Count%29%0A%20%20bind%28%22%3F%22%20as%20%3Fdefault_inception%29%0A%20%20bind%28%22no%20aricles%22%20as%20%3Fdefault_article%29%0A%20%20OPTIONAL%20%20%7B%3Fitem%20wdt%3AP571%20%3Finception%20%7D%20%0A%20%20OPTIONAL%20%20%7B%3Fitem%20wdt%3AP5630%20%3FPCount%20%7D%0A%20%20SERVICE%20wikibase%3Alabel%20%7B%20bd%3AserviceParam%20wikibase%3Alanguage%20%22%5BAUTO_LANGUAGE%5D%2Cen%2Car%2Cde%2Cfr%2Cit%22.%20%7D%0A%20%20bind%28coalesce%28%3Farticle%2C%20%3Fdefault_article%29%20as%20%3FwpArticle%29%0A%20%20bind%28coalesce%28%3FPCount%2C%20%3Fdefault_Count%29%20as%20%3FPCount%29%0A%20%20bind%28coalesce%28YEAR%28%3Finception%29%2C%20%3Fdefault_inception%29%20as%20%3Fyear%29%0A%20%20%20%20%20%20%0A%7D%20GROUP%20BY%20%3Fitem%20%3Fyear%20%3FitemLabel%20%3FPCount%0AORDER%20%20BY%20DESC%28%3FInception_Year%29%20%0A%20q" >}}
 
 
 The deterioration of freedoms between the previous repressive regime and the current, most repressive regime is terrifying. Especially since the number of prisoners did not fluctuate for many years under the previous regime, which had its political detainees as well. The correlation between the number of prisoners [^](https://www.prisonstudies.org/country/egypt "World Prison Brief|Egypt - (c.66,000 in 2011, c.119,000 in 2021)") and the deterioration of civil liberties under the current regime: [^](https://www.prisonstudies.org/country/egypt "World Prison Brief|Egypt - (Prison population rate (per 100,000 of national population) increased by 41% (83 in 2011,117 in 2021)") Freedom is deprived by imprisoning 53,000 people, 80% more, compared to its notorious predecessor!
