--- a/content/english/3.md
+++ b/content/english/3.md
@@ -14,13 +14,13 @@ hideComments : false
 
 Egypt has built 60 detention centers over the last 11 years, almost all of them under Mr. el-Sisi, according to Egyptian reports and the Cairo-based Arabic Network for Human Rights Information.[^](https://www.nytimes.com/2022/08/08/world/middleeast/egypts-prisons-conditions.html#:~:text=Egypt%20has%20built%2060%20detention,78%20prisons%2C%20the%20group%20said. "‘A Slow Death’: Egypt’s Political Prisoners Recount Horrific Conditions") How much can we understand about how many of those 78 prisons and hundreds of places of detention that the Egyptian regime make in disguise, but from those imprisoned in egypt?
 
-Out of the 78 prisons, wikibase has entries about ...
+Out of the 78 prisons, and hundreds of detention centers, wikibase has entries about ...
 
-{{< iframe "https://query.wikidata.org/embed.html#SELECT%20%20%28%28CONCAT%28%28STR%28COUNT%28%3Fitem%29%29%29%2C%22%22%29%29%20AS%20%3FWikiData_entries%29%0A%20%20WHERE%7B%0A%20%20%20%20%20%20%3Fitem%20wdt%3AP31%20wd%3AQ40357.%20%23%20Must%20be%20of%20a%20prison%0A%20%20%20%20%20%20%3Fitem%20wdt%3AP17%20wd%3AQ79.%0A%7D%0A%20" >}}
+{{< iframe "https://query.wikidata.org/embed.html#SELECT%20%20%28%28CONCAT%28%28STR%28COUNT%28%3Fitem%29%29%29%2C%22%22%29%29%20AS%20%3FwdtQ%29%0A%20%20WHERE%7B%0A%20%20%20%20%20%20%3Fitem%20wdt%3AP31%20wd%3AQ40357.%20%23%20Must%20be%20of%20a%20prison%0A%20%20%20%20%20%20%3Fitem%20wdt%3AP17%20wd%3AQ79.%0A%7D%0A%20" >}}
 
 of them...
 
 But how much numbers, information and wikipedia articles are out there?
 
 
-{{< iframe "https://query.wikidata.org/embed.html#SELECT%20%20%3Fitem%20%3FitemLabel%20%28%3Fyear%20AS%20%3Fsince%29%20%28%3FPCount%20AS%20%3Fpeople%29%20%28CONCAT%28%28STR%28COUNT%28%3Farticle%29%29%29%2C%22%20%20%20%20%20%20%20%20%20%20wikipedia%20articles%20%2F%20%22%20%2C%20%28STR%28COUNT%28%3Farticle%29%29%29%2C%22%20Languages%22%29%20as%20%3FArticles%29%0A%20%20WHERE%7B%0A%20%20%20%20%20%20%3Fitem%20wdt%3AP31%20wd%3AQ40357.%20%23%20Must%20be%20of%20a%20prison%0A%20%20%20%20%20%20%3Fitem%20wdt%3AP17%20wd%3AQ79.%0A%20%20%20%20%20%20%23bind%28%22no%20aricles%22%20as%20%3Fdefault_article%29%0A%20%20%20%20%20%20OPTIONAL%20%7B%3Farticle%20schema%3Aabout%20%3Fitem%20.%0A%20%20%20%20%20%20%3Farticle%20schema%3AinLanguage%20%3FwpLanguage.%7D%0A%20%20%20%20%20%20%0A%20%20%20%20%20%20bind%28%22unknown%22%20as%20%3Fdefault_Count%29%0A%20%20bind%28%22%3F%22%20as%20%3Fdefault_inception%29%0A%20%20bind%28%22no%20aricles%22%20as%20%3Fdefault_article%29%0A%20%20OPTIONAL%20%20%7B%3Fitem%20wdt%3AP571%20%3Finception%20%7D%20%0A%20%20OPTIONAL%20%20%7B%3Fitem%20wdt%3AP5630%20%3FPCount%20%7D%0A%20%20SERVICE%20wikibase%3Alabel%20%7B%20bd%3AserviceParam%20wikibase%3Alanguage%20%22%5BAUTO_LANGUAGE%5D%2Cen%2Car%2Cde%2Cfr%2Cit%22.%20%7D%0A%20%20bind%28coalesce%28%3Farticle%2C%20%3Fdefault_article%29%20as%20%3FwpArticle%29%0A%20%20bind%28coalesce%28%3FPCount%2C%20%3Fdefault_Count%29%20as%20%3FPCount%29%0A%20%20bind%28coalesce%28YEAR%28%3Finception%29%2C%20%3Fdefault_inception%29%20as%20%3Fyear%29%0A%20%20%20%20%20%20%0A%7D%20GROUP%20BY%20%3Fitem%20%3Fyear%20%3FitemLabel%20%3FPCount%0AORDER%20%20BY%20%28%3FArticles%29%20DESC%28%3Fsince%29%20" >}}
+{{< iframe "https://query.wikidata.org/embed.html#SELECT%20%20%3FitemLabel%20%28%3Fyear%20AS%20%3Fsince%29%20%28%3FPCount%20AS%20%3Fpeople%29%20%28CONCAT%28%28STR%28COUNT%28%3Farticle%29%29%29%2C%22%20wikipedia%20articles%20%2F%20%22%20%2C%20%28STR%28COUNT%28%3Farticle%29%29%29%2C%22%20Languages%22%29%20as%20%3FArticles%29%20%3Fitem%0A%20%20WHERE%7B%0A%20%20%20%20%20%20%3Fitem%20wdt%3AP31%20wd%3AQ40357.%20%23%20Must%20be%20of%20a%20prison%0A%20%20%20%20%20%20%3Fitem%20wdt%3AP17%20wd%3AQ79.%0A%20%20%20%20%20%20%23bind%28%22no%20aricles%22%20as%20%3Fdefault_article%29%0A%20%20%20%20%20%20OPTIONAL%20%7B%3Farticle%20schema%3Aabout%20%3Fitem%20.%0A%20%20%20%20%20%20%3Farticle%20schema%3AinLanguage%20%3FwpLanguage.%7D%0A%20%20%20%20%20%20%0A%20%20%20%20%20%20bind%28%22unknown%22%20as%20%3Fdefault_Count%29%0A%20%20bind%28%22%3F%22%20as%20%3Fdefault_inception%29%0A%20%20bind%28%22no%20aricles%22%20as%20%3Fdefault_article%29%0A%20%20OPTIONAL%20%20%7B%3Fitem%20wdt%3AP571%20%3Finception%20%7D%20%0A%20%20OPTIONAL%20%20%7B%3Fitem%20wdt%3AP5630%20%3FPCount%20%7D%0A%20%20SERVICE%20wikibase%3Alabel%20%7B%20bd%3AserviceParam%20wikibase%3Alanguage%20%22%5BAUTO_LANGUAGE%5D%2Cen%2Car%2Cde%2Cfr%2Cit%22.%20%7D%0A%20%20bind%28coalesce%28%3Farticle%2C%20%3Fdefault_article%29%20as%20%3FwpArticle%29%0A%20%20bind%28coalesce%28%3FPCount%2C%20%3Fdefault_Count%29%20as%20%3FPCount%29%0A%20%20bind%28coalesce%28YEAR%28%3Finception%29%2C%20%3Fdefault_inception%29%20as%20%3Fyear%29%0A%20%20%20%20%20%20%0A%7D%20GROUP%20BY%20%3Fitem%20%3Fyear%20%3FitemLabel%20%3FPCount%0AORDER%20%20BY%20%28%3FArticles%29%20DESC%28%3Fsince%29%20%0A" >}}
