--- a/content/english/3.md
+++ b/content/english/3.md
@@ -12,9 +12,11 @@ readingTime : false
 hideComments : false
 ---
 
-Egypt has built 60 detention centers over the last 11 years, almost all of them under Mr. el-Sisi, according to Egyptian reports and the Cairo-based Arabic Network for Human Rights Information.[^](https://www.nytimes.com/2022/08/08/world/middleeast/egypts-prisons-conditions.html#:~:text=Egypt%20has%20built%2060%20detention,78%20prisons%2C%20the%20group%20said. "‘A Slow Death’: Egypt’s Political Prisoners Recount Horrific Conditions") How much can we understand about how many of those 78 prisons and hundreds of places of detention that the Egyptian regime make in disguise, but from those imprisoned in egypt?
+Egypt has built 60 detention centers over the last 11 years, almost all of them under Mr. el-Sisi, according to Egyptian reports and the Cairo-based Arabic Network for Human Rights Information.[^](https://www.nytimes.com/2022/08/08/world/middleeast/egypts-prisons-conditions.html#:~:text=Egypt%20has%20built%2060%20detention,78%20prisons%2C%20the%20group%20said. "‘A Slow Death’: Egypt’s Political Prisoners Recount Horrific Conditions")
 
-Out of the 78 prisons, and hundreds of detention centers, wikibase has entries about ...
+How much can we understand about how many of those **78 prisons** and hundreds of detention centers that the Egyptian regime make in disguise, but from those imprisoned in egypt?
+
+Well, wikibase has entries about ...
 
 {{< iframe "https://query.wikidata.org/embed.html#SELECT%20%20%28%28CONCAT%28%28STR%28COUNT%28%3Fitem%29%29%29%2C%22%22%29%29%20AS%20%3FwdtQ%29%0A%20%20WHERE%7B%0A%20%20%20%20%20%20%3Fitem%20wdt%3AP31%20wd%3AQ40357.%20%23%20Must%20be%20of%20a%20prison%0A%20%20%20%20%20%20%3Fitem%20wdt%3AP17%20wd%3AQ79.%0A%7D%0A%20" >}}
 
